--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -1,5 +1,11 @@
 @use "sass:meta";
-@mixin font-smooth-with-browser($property, $value, $prefixes: (), $default-property, $default-value){
+@mixin font-smooth-with-browser(
+  $property,
+  $value,
+  $prefixes: (),
+  $default-property,
+  $default-value
+) {
   @each $prefix in $prefixes {
     #{'-' + $prefix + '-'+ $property+'ing'}: $value;
   }
@@ -7,11 +13,11 @@
   #{$default-property}: $default-value;
 }
 
-
-@mixin style-font($property, $value, $types: ()){
- @for $i from 0 to length($types) {
-    #{nth($types, $i + 1)}{
-        #{$property}: $value;
+@mixin style-font($property, $value, $types: ()) {
+  @for $i from 0 to length($types) {
+    #{nth($types, $i + 1)} {
+      #{$property}: $value;
+      font-size: 1.25rem;
     }
   }
 }
