--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -1,4 +1,9 @@
 .header {
-    background: #333333;
-    height: 80px;
+  background: #333333;
+  display: flex;
+  justify-content: center;
+  padding: 1.25rem 0;
+}
+.header  img {
+  height: 2rem;
 }
